style.css
 tr:nth-child(even) {background: gainsboro;}
 tr:nth-child(odd) {background: white;}
html *
{
   font-size: 1.7vmin ;
   color: #000 ;
   font-family: Arial ;

}

body {
/*background-image: url("Hintergrund.png");*/
background-color: #393E46;
width : 99%;
height : 100%;
background-size: 100vw 100vh;

}

#startscreen *{
	text-align: center;
	color: #969696;
}

/* Datenbewegungsanzeigeblöcke*/
.dataMovement{
	position: fixed;
	left: 0vw;
	top :0vh;
	width: 100vw;
	height : 100 vh;
	max-width: 100vw;
	max-height: 100vh;
	display:none;
}

.icon{
	width: 4vmin;
	height: 4vmin;
	max-width: 100vw;
	max-height: 100vh;
}

.control{
	display:none;


}
#crtIcon{
	width: 5.4vmin;
	height: 4vmin;
	max-width: 100vw;
	max-height: 100vh;

}


/* Knöpfe */


/*obere Leiste*/

#ramOptions{
	position:fixed;
	left:2vw;
	top:2vh;

}
#mcOptions{
	position:fixed;
	left:60vw;
	top:2vh;


}
#controlUnitToggle{
	position:fixed;
	left:40vw;
	top:2vh;


}
#recordMcPanel{
	position:fixed;
	left:70vw;
	top:1.7vh;


}
#recordMcPanel input{
	margin-right:0.2vw;
	margin-bottom:0.5vh;
	padding: 0px;
	width: 5vw;
}

#bonsaiModeButton{
		position: fixed;
	left: 90vw;
	top : 2.5vh;






}

/*Eigentliches Programm*/
#programmCounterText {
	position: fixed;
	left: 71.3vw;
	top : 36vh;
	width: 5vw;
	height : 1 vh;
	font-size: 1.8vmin;
	color: #969696 ;
}

#equalZeroText {
	position: fixed;
	left: 80vw;
	top : 49vh;
	width: 5vw;
	height : 1 vh;
	font-size: 2.2vmin;
	color: #969696 ;
}



#AddressBusInput {
	position: fixed;
	left: 5vw;
	top : 13vh;
	width: 5vw;
	height : 1 vh;

}
#DataBusInput {
	position: fixed;
	left: 5vw;
	top : 93vh;
	width: 5vw;
	height : 1 vh;

}


#DbInputButton{
	position: fixed;
	left: 5vw;
	top : 95.5vh;
}

#ABInputButton{
	position: fixed;
	left:5vw;
	top:15.5vh;

}


#DataBus {
	position: fixed;
	left : 50vw;
	top :90.8vh;
	font-size: 3vmin;
	color: #ffffff ;
}
 #AddressBus{
	position: fixed;
	left : 50vw;
	top :  11vh;
	font-size: 3vmin;
	color: #ffffff ;

}
#Accumulator{
	position:fixed;
	left:91vw;
	top:46vh;
	font-size: 3vmin;
	color: #ffffff ;
	transform: translate(-50%, 0%);
}

#InstructionalRegister{
	position:fixed;
	left:49.5vw;
	top:35vh;
	font-size: 3vmin;
	transform: translate(-50%, 0%);
}
#ProgrammCounter{
	position:fixed;
	left:66.5vw;
	top:35vh;
	font-size: 3vmin;
	color: #ffffff ;
}




#RamDbButton{
	position :fixed;
	left: 23.5vw;
	top:84vh;
	transform: translate(-50%, 0%);


}
#DbRamButton{
	position :fixed;
	left: 16.5vw;
	top:84vh;
	transform: translate(-50%, 0%);

}

#DbAccButton{
	position :fixed;

	top:61vh;
	left:80.5vw;
transform: translate(-50%, 0%);
}
#AccDbButton{
	position :fixed;
	left:91.5vw;
	top:61vh;
	transform: translate(-50%, 0%);
}

#NullAccButton{
	position :fixed;
	left:88vw;
	top:30vh;
	width: 5vw;

}

#NullaccHighlight{
	left:87.8vw;
	top:29.8vh;
	width: 5.4vw;
	height:3.2vh;
	background-color: #8F0004;


}


#IncAccButton{
	position :fixed;
	left:88vw;
	top:24vh;
	width: 5vw;

}

#IncaccHighlight{
	left:87.8vw;
	top:23.8vh;
	width: 5.4vw;
	height:3.2vh;
	background-color: #8F0004;


}
#DecAccButton{
	position :fixed;
	left:88vw;
	top:27vh;
	width: 5vw;

}


#DecaccHighlight{
	left:87.8vw;
	top:26.8vh;
	width: 5.4vw;
	height:3.2vh;
	background-color: #8F0004;

}
#AddAccButton{
position :fixed;
	left:80.5vw;
	top:64vh;
transform: translate(-50%, 0%);

}

#SubAccButton{
position :fixed;
left:80.5vw;
	top:67vh;

transform: translate(-50%, 0%);
}

#InsMcButton{
	position :fixed;
	left:46.7vw;
	top:47vh;
	transform: translate(-50%, 0%);
}


#InsAbButton{
	position :fixed;
	left:51.5vw;
	top:27vh;
	transform: translate(-50%, 0%);
}


#DbInsButton{
	position :fixed;
	left:39vw;
	top:60vh;
	transform: translate(-50%, 0%);
}

#InsPcButton{
	position :fixed;
	left:56vw;
	top:38.5vh;
}

#PcAbButton{
	position :fixed;
	left:67.8vw;
	top:27vh;
	transform: translate(-50%, 0%);

}
#NullMcButton{
	position :fixed;
	left:61vw;
	top:80vh;


}
#NullMcHighlight{
	left:60.8vw;
	top:79.8vh;
	width: 3.8vw;
	height:3.2vh;
	background-color: #8F0004;

}

#IncPcButton{
	position :fixed;
	left:65.5vw;
	top:44vh;
	width: 5vw;
}


#IncPcHighlight{
position :fixed;
	left:65.3vw;
	top:43.8vh;
	width: 5.4vw;
	height:3.2vh;
	background-color: #8F0004;

}




#IncPc0Button{
	position :fixed;
	left:65.5vw;
	top:47vh;
	width: 5vw;
}

#IncPc0Highlight{
position :fixed;
	left:65.3vw;
	top:46.8vh;
	width: 5.4vw;
	height:3.2vh;
	background-color: #8F0004;

}



#HaltButton{
	position :fixed;
	left:61vw;
	top:83vh;

}

#HaltButtonHighlight{
	position :fixed;
	left:60.8vw;
	top:82.8vh;
	width: 3.2vw;
	height:3.2vh;
	background-color: #8F0004;

}

#executeSpeedSlider{
	width:7vw;

}

#MicoCodeCounter{
	position:fixed;
	left:45.5vw;
	top:52.5vh;
	font-size: 3vmin;
	color: #ffffff ;


}

/*Eingabe in ram popup*/
#RamEingabe{
	position: fixed;
	left:0.5vw;
	top:45vh;
	width: 8vw;
	height: 18vh;
	background-image: url("./images/ramEingabe.png");
	background-size: 100% 100%;
}

#RamEingabe *{
width: 5vw;
height: 13%;
margin-left: 0.3vw;
margin-top: 3%;
display:block;
padding:0px;
}
#RamEingabe p{
width: 5vw;
height: 25.5%;
margin-left: 0.3vw;
margin: 0px;
padding: 0px;

}

#Low{
	width: 3vw;


}

#High{
	width: 3vw;


}




#MicroCodeDiv{
  position: fixed;
  left: 45vw;
  top: 58.7vh;
  height: 20vh;
  width:3vw;
}


#RamDiv{
  position: fixed;
  left: 9vw;
  top: 26vh;
	height:50vh;
}



#viewChangeTable{
	position: fixed;
	left: 9vw;
	top: 72.5vh;
	width:23vw;
}

